--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,4 +9,4 @@ steps:
 
   # Deploy
   - name: "gcr.io/firebase-hosting-286313/firebase"
-    args: ["deploy", "--only=hosting"]
+    args: ["deploy"]
