--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,5 +9,5 @@ steps:
 
   # Deploy
   - name: "gcr.io/firebase-hosting-286313/firebase"
-    entrypiont: "bash"
+    entrypoint: "bash"
     args: ["deploy", "&&", "ls"]
