--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
   # Install
-  - name: "gcr.io/cloud-builders/npm"
+  - name: "gcr.io/cloud-builders/yarn"
     args: ["install"]
 
   # Build
-  - name: "gcr.io/cloud-builders/npm"
-    args: ["run", "build"]
+  - name: "gcr.io/cloud-builders/yarn"
+    args: ["build"]
 
   # Deploy
   - name: "gcr.io/firebase-hosting-286313/firebase"
