--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
   # Install
-  - name: "gcr.io/cloud-builders/yarn"
+  - name: "gcr.io/cloud-builders/npm"
     args: ["install"]
 
   # Build
-  - name: "gcr.io/cloud-builders/yarn"
+  - name: "gcr.io/cloud-builders/npm"
     args: ["build"]
 
   # Deploy
