--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,12 @@
 steps:
   # Install
-  - name: "gcr.io/cloud-builders/npm"
+  - name: "gcr.io/cloud-builders/yarn"
     args: ["install"]
 
   # Build
-  - name: "gcr.io/cloud-builders/npm"
+  - name: "gcr.io/cloud-builders/yarn"
     args: ["build"]
 
   # Deploy
-  - name: "gcr.io/firebase-hosting-286313/firebase"
+  - name: gcr.io/firebase-hosting-286313/firebase
     args: ["deploy"]
