--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,12 @@
 steps:
   # Install
   - name: "gcr.io/cloud-builders/yarn"
+    entrypoint: "yarn"
     args: ["install"]
 
   # Build
   - name: "gcr.io/cloud-builders/yarn"
+    entrypoint: "yarn"
     args: ["build"]
 
   # Deploy
