--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,5 @@ steps:
     args: ["build", "--ignore-engines"]
 
   # Deploy
-
   - name: gcr.io/firebase-hosting-286313/firebase
-    args: ["deploy", "-p ./build"]
+    args: ["deploy", "-p buildTest"]
