--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,5 +11,4 @@ steps:
 
   # Deploy
   - name: gcr.io/firebase-hosting-286313/firebase
-    args: ["deploy"]
-    dir: "build"
+    args: ["projects:list"]
