--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,4 +15,10 @@ steps:
 
   # Deploy
   - name: "gcr.io/firebase-hosting-286313/firebase"
-    args: ["deploy"]
+    args:
+      [
+        "deploy",
+        "--project=firebase-hosting-286313",
+        "-p build",
+        "--only=hosting",
+      ]
